// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmConnectedNetwork has a connecting state 1`] = `
<div
  class="sidebar-bottom"
>
  <!---->
   
  <div
    class="tm-connected-network"
    id="tm-connected-network"
  >
    <div
      class="tm-connected-network__connection"
    >
      <div
        class="tm-connected-network__icon"
        id="tm-connected-network__icon"
      >
        <span
          class="tm-connected-network__status green"
        />
      </div>
       
      <div
        class="tm-connected-network__string"
        id="tm-connected-network__string"
      >
        <span
          class="chain-id"
        >
          
          
        
        </span>
      </div>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__block"
    >
       -- 
    </div>
  </div>
   
  <poweredby-stub
    iscurrentnetwork="true"
    ismenu="true"
    network="[object Object]"
    poweredbyline="true"
  />
</div>
`;

exports[`TmConnectedNetwork has the expected html structure when connected 1`] = `
<div
  class="sidebar-bottom"
>
  <!---->
   
  <div
    class="tm-connected-network"
    id="tm-connected-network"
  >
    <div
      class="tm-connected-network__connection"
    >
      <div
        class="tm-connected-network__icon"
        id="tm-connected-network__icon"
      >
        <span
          class="tm-connected-network__status green"
        />
      </div>
       
      <div
        class="tm-connected-network__string"
        id="tm-connected-network__string"
      >
        <span
          class="chain-id"
        >
          
          gaia-20k
        
        </span>
      </div>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__block"
    >
      <router-link-stub
        class="noClickable"
        to=""
      >
        
        #6,001
      
      </router-link-stub>
    </div>
  </div>
   
  <poweredby-stub
    iscurrentnetwork="true"
    ismenu="true"
    network="[object Object]"
    poweredbyline="true"
  />
</div>
`;
